--- a/week7_lab/style.css
+++ b/week7_lab/style.css
@@ -1,20 +1,19 @@
 body {
-    font-family: 'Open Sans Condensed', sans-serif;
-    color: navy;
-    background: PeachPuff;
+  font-family: "Open Sans Condensed", sans-serif;
+  color: navy;
 }
 
 #container {
-    margin: 0 auto;
-    width: 80%;
-    text-align: center;
+  margin: 0 auto;
+  width: 80%;
+  text-align: center;
 }
 
 h1 {
-    font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
 }
 
 #animal-img {
-    border: 10px solid navy;
-    border-radius: 10px;
+  border: 10px solid navy;
+  border-radius: 10px;
 }
